--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "lodash": "^4.17.20",
     "react": "16.13.1",
