--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-switch": "^2.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-camera": "~9.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
