--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-camera": "~9.1.0",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,7 +29,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "expo-camera": "~9.1.0"
+    "expo-image-picker": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
