--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-camera": "~9.1.0",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "lodash": "^4.17.20",
@@ -26,10 +27,10 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-switch": "^2.0.0",
+    "react-native-uuid": "^1.4.9",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "expo-image-picker": "~9.2.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
